@@ -1,6 +1,6 @@
 ! File      : /afs/psi.ch/user/f/flechsig/phase/src/gui/mirrorbox.uil
 !  Date      : <16 Feb 04 09:23:44 flechsig> 
-!  Time-stamp: <23 Feb 04 16:49:13 flechsig> 
+!  Time-stamp: <20 Apr 04 12:44:48 flechsig> 
 !  Author    : Uwe Flechsig, flechsig@psi.ch
 
 !  $Source$ 
@@ -570,7 +570,6 @@ object
             MrmNcreateCallback  = procedure create_proc (kEOEAB4);
             XmNactivateCallback = procedure activate_proc (kEOEAB4);    };
         }; 
-
 
 object  
     EGT3CFFAB : XmArrowButton {
