@@ -1,6 +1,6 @@
 /*   File      : /afs/psi.ch/user/f/flechsig/phase/src/phase/activate_proc.c */
 /*   Date      : <10 Feb 04 16:32:30 flechsig>  */
-/*   Time-stamp: <24 Mar 04 11:16:54 flechsig>  */
+/*   Time-stamp: <20 Apr 04 14:50:51 flechsig>  */
 /*   Author    : Uwe Flechsig, flechsig@psi.ch */
 
 /*   $Source$  */
@@ -279,12 +279,20 @@ void activate_proc(w, tag, reason)
     XtManageChild(widget_array[kEBLDialog]); 
     break;   
 
-  case kEOETM:                          /* Edit- Opt. Element Pdme */
+  case kEOETM:
+  case kEOEPM:
+  case kEOEPG:
+  case kEOEPElliG:
+  case kEOEPGV:
   case kEOETG:
   case kEOEVLSG:     
   case kEOEElli:     
-  case kEOEPElli:    
-     
+  case kEOEPElli: 
+  case kEOESlit:
+  case kEOEGeneral:
+    printf("activate_proc: OEBox PDM: widget_num: %d\n", widget_num);
+    SetOElementBoxSensitivity(widget_num);
+    
     /* last modification: 17 Jun 97 08:49:57 flechsig */
     /* 
     FetchWidget(kEOElement, "EOElementBox");  
