@@ -1,6 +1,6 @@
 /*   File      : /afs/psi.ch/user/f/flechsig/phase/src/phase/version.h */
 /*   Date      : <25 Jun 02 07:56:56 flechsig>  */
-/*   Time-stamp: <24 Mar 04 16:40:50 flechsig>  */
+/*   Time-stamp: <20 Apr 04 14:52:53 flechsig>  */
 /*   Author    : Uwe Flechsig, flechsig@psi.ch */
 
 /*   $Source$  */
@@ -10,8 +10,8 @@
 
 #ifndef VERSION_H
   #define VERSION_H
-  #define              VERSION_STRING        "1.18" 
-  #define              VERSION_DATE          "24-MAR-2004"
+  #define              VERSION_STRING        "1.19" 
+  #define              VERSION_DATE          "20-Apr-2004"
 #endif    /* VERSION_H */   
 
 /* end version.h */
